# selig-fa

./: .env  .gitignore  LICENSE  README.md  pyproject.toml
finance/: README.md  __init__.py  bench.py  clustering_brainstorm.ipynb  constants.py  feature_engineering.py  finance_api.py  finance_ds.ipynb  finance_wrangling.py  notes.txt  regression_brainstorm.ipynb  regression_polished.ipynb  scratch.py
finance/.data/: nasdaq_tickers.csv
